# gugu-st-tools

./: .gitignore  README.md  ad-install-test.sh  ad-install.sh  ad-st-test.sh  ad-st.sh  dckr-st-test.sh  dckr-st.sh  worker.js
.github/workflows/: sync-to-gitee.yml
gui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
gui/src/: App.tsx  main.tsx  styles.css
gui/src-tauri/: Cargo.toml  tauri.china.conf.json  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/src/: main.rs
jiuguan/: pc-st.ps1
