[package]
name = "gugu-assistant-gui"
version = "0.1.0"
description = "咕咕助手 GUI"
authors = ["QingJue"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt"] }
